сделал вывод юзеров и товаров через маппры, настроил ссылки DTO