@@ -1,5 +1,7 @@
 package com.doc_byte.eshop.users.service;
 
+import com.doc_byte.eshop.users.dto.GetAllUsers;
+import com.doc_byte.eshop.users.dto.mapper.UserMapper;
 import com.doc_byte.eshop.users.model.User;
 import com.doc_byte.eshop.users.dto.CreateUserRequest;
 import com.doc_byte.eshop.exceptions.ConflictException;
@@ -21,13 +23,17 @@ public class UserService {
 
     private final UserRepository userRepository;
     private final BCryptPasswordEncoder encoder;
+    private final UserMapper userMapper;
+    public static final String USER_NOT_FOUND_TEMPLATE = "Пользователь %s не найден";
 
-    public List<User> getAllUsers() {
-        return userRepository.findAll();
+    public List<GetAllUsers> getAllUsers() {
+        return userRepository.findAll().stream()
+                .map(userMapper::toDto)
+                .toList();
     }
 
     public boolean hasPermissionToChangeUsername(String username) {
-        User user = userRepository.findByUsername(username).orElseThrow(() -> new NotFoundException("Пользователь %s не найден".formatted(username)));
+        User user = userRepository.findByUsername(username).orElseThrow(() -> new NotFoundException(String.format(USER_NOT_FOUND_TEMPLATE, username)));
 
         Timestamp lastChange = user.getLastUsernameChange();
         return lastChange == null || lastChange.toLocalDateTime().isBefore(LocalDateTime.now().minusDays(30));
@@ -45,7 +51,7 @@ public class UserService {
     }
 
     public void changePassword(String username, String oldPassword, String newPassword) {
-        User user = userRepository.findByUsername(username).orElseThrow(() -> new NotFoundException("Пользователь %s не найден".formatted(username)));
+        User user = userRepository.findByUsername(username).orElseThrow(() -> new NotFoundException(String.format(USER_NOT_FOUND_TEMPLATE, username)));
 
         if (!encoder.matches(oldPassword, user.getPassword())) {
             throw new ConflictException("Старый пароль не совпадает");
@@ -56,7 +62,7 @@ public class UserService {
     }
 
     public void deleteUser(String username, String password) {
-        User user = userRepository.findByUsername(username).orElseThrow(() -> new NotFoundException("Пользователь %s не найден".formatted(username)));
+        User user = userRepository.findByUsername(username).orElseThrow(() -> new NotFoundException(String.format(USER_NOT_FOUND_TEMPLATE, username)));
 
         if (!encoder.matches(password, user.getPassword())) {
             throw new ConflictException("Пароль неверный");
@@ -70,7 +76,7 @@ public class UserService {
             throw new ConflictException("Пользователь с таким именем уже существует");
         }
 
-        User user = userRepository.findByUsername(oldUsername).orElseThrow(() -> new NotFoundException("Пользователь %s не найден".formatted(oldUsername)));
+        User user = userRepository.findByUsername(oldUsername).orElseThrow(() -> new NotFoundException(String.format(USER_NOT_FOUND_TEMPLATE, oldUsername)));
 
         user.setUsername(newUsername);
         user.setLastUsernameChange(Timestamp.from(Instant.now()));
